// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Closed 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb clnikX"
    disabled={undefined}
    onClick={[Function]}
    size="small"
    type="closed"
  >
     
    Closed Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <div
    className="hit-box-container"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <button
    className="sc-bxivhb douPQA"
    disabled={true}
    onClick={[Function]}
    size="small"
    type="primary"
  >
     
    Disabled Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only (disabled) 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <div
    className="hit-box-container"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <button
    className="sc-bxivhb ghaImb"
    disabled={true}
    icon="wg-edit"
    onClick={[Function]}
    size="small"
    type="neutral"
  >
    <div
      className="icon"
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <i
        className="wg-edit"
      />
    </div>
     
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only (large) 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb ePuzMi"
    disabled={undefined}
    icon="wg-edit"
    onClick={[Function]}
    size="large"
    type="neutral"
  >
    <div
      className="icon"
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <i
        className="wg-edit"
      />
    </div>
     
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb ghaImb"
    disabled={undefined}
    icon="wg-edit"
    onClick={[Function]}
    size="small"
    type="neutral"
  >
    <div
      className="icon"
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <i
        className="wg-edit"
      />
    </div>
     
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Large button 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb fmSTBV"
    disabled={undefined}
    onClick={[Function]}
    size="large"
    type="primary"
  >
     
    Large Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Loading 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb kCZXER"
    disabled={true}
    onClick={[Function]}
    size="small"
    type="primary"
  >
    <div
      className="icon"
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <i
        className="wg-loading"
      />
    </div>
     
    Loading Icon
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Neutral 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb bZqwRM"
    disabled={undefined}
    onClick={[Function]}
    size="small"
    type="neutral"
  >
     
    Neutral Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Neutral Off 1`] = `
<div
  style={
    Object {
      "backgroundColor": "gray",
      "display": "inline-block",
      "padding": "10px",
    }
  }
>
  <div
    className="sc-htpNat ihtkAy"
  >
    <button
      className="sc-bxivhb hoJvJx"
      disabled={undefined}
      onClick={[Function]}
      size="small"
      type="neutral-off"
    >
       
      Neutral Off Button
    </button>
    <div
      className="sc-bdVaJa EXKLM"
    >
      <div
        className="sc-bwzfXH fehTEF"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb douPQA"
    disabled={undefined}
    onClick={[Function]}
    size="small"
    type="primary"
  >
     
    Primary Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary with Icon 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb douPQA"
    disabled={undefined}
    icon="wg-meat"
    onClick={[Function]}
    size="small"
    type="primary"
  >
    <div
      className="icon"
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <i
        className="wg-meat"
      />
    </div>
     
    Primary with Icon
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Request 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb kNUQVP"
    disabled={undefined}
    onClick={[Function]}
    size="small"
    type="request"
  >
     
    Request Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  className="sc-htpNat ihtkAy"
>
  <button
    className="sc-bxivhb dUygCy"
    disabled={undefined}
    onClick={[Function]}
    size="small"
    type="secondary"
  >
     
    Secondary Button
  </button>
  <div
    className="sc-bdVaJa EXKLM"
  >
    <div
      className="sc-bwzfXH fehTEF"
    >
      This action is disabled.
    </div>
  </div>
</div>
`;
